[metadata]
name = rosdistro_utils
version = attr: rosdistro_utils.__version__
author_email = Scott K Logan <logans@cottsay.net>
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
license = Apache License, Version 2.0
description = Utilities for testing and interacting with the rosdistro index and rosdep database.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
install_requires =
    GitPython
    rosdep
    unidiff
    PyGithub>2
packages = find:
zip_safe = false

[options.extras_require]
test =
    pytest

[options.packages.find]
exclude =
    test
    test.*

[tool:pytest]
junit_suite_name = rosdistro_utils

[flake8]
import-order-style = google

[coverage:run]
source = rosdistro_utils
